full configparser added with function configs

--- a/confluent_kafka_postgres_python/main/apps/configs.ini
+++ b/confluent_kafka_postgres_python/main/apps/configs.ini
@@ -1,5 +1,5 @@
 [postgres]
-host: localhost
+host: 192.168.201.17
 port: 5432
 user: admin
 password: admin
@@ -7,7 +7,7 @@ database: kafka_persistent
 table: kafka_persistent_data
 
 [kafka]
-bootstrap_servers: localhost:29092
+bootstrap_servers: 192.168.201.17:29092
 group_id: test-2
 auto_offset_reset: earliest
 enable_auto_commit: false
